[gd_scene load_steps=5 format=3 uid="uid://cqxxs2uyoubea"]

[ext_resource type="Script" path="res://script/character.gd" id="1_b27ox"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pdahm"]
radius = 0.3

[sub_resource type="SphereShape3D" id="SphereShape3D_qfo0i"]
radius = 0.3

[sub_resource type="SphereShape3D" id="SphereShape3D_sfgq4"]
radius = 0.3

[node name="Character" type="CharacterBody3D"]
script = ExtResource("1_b27ox")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_pdahm")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.527736, 0)

[node name="Eye" type="Node3D" parent="Head"]

[node name="Camera3D" type="Camera3D" parent="Head/Eye"]

[node name="pick_up_ray" type="RayCast3D" parent="Head/Eye/Camera3D"]
target_position = Vector3(0, 0, -2)
hit_back_faces = false

[node name="SpringArm3D" type="SpringArm3D" parent="Head/Eye/Camera3D"]
shape = SubResource("SphereShape3D_qfo0i")
spring_length = -1.0

[node name="pick_target" type="Marker3D" parent="Head/Eye/Camera3D/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
gizmo_extents = 0.01

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/Eye/Camera3D/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
visible = false
shape = SubResource("SphereShape3D_sfgq4")

[node name="pick_timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="pick_timer" to="." method="_on_pick_timer_timeout"]
